# FluentUI

./: CMakeLists.txt  FluentUIConfig.cmake.in
.github/workflows/: ubuntu.yml
debian/: changelog  control  rules
src/: CMakeLists.txt
src/.cmake/: QmlPlugin.cmake
